# html2texi

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  acconfig.h  autogen.sh  config.cache  config.h  config.h.in  config.status  configure  configure.in  foo.texi  fun.info  funky.info  html2texi.c  html2texi.h  html2texi.info  html2texi.l  html2texi.lsm  html2texi.lsm.in  html2texi.texi  stamp-vti  test.html  texinfo.tex  utils.c  utils.h
