dnl Process this file with autoconf to produce a configure script.
AC_INIT(html2texi.l)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(html2texi,0.1)

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_AWK
AC_PROG_CC
AM_PROG_LEX

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_CHECK_FUNCS(strdup strerror)

AC_OUTPUT(Makefile html2texi.lsm)
